<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="paweltypiak.checkerboard_imu_comparator.SettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_title"
            android:textStyle="bold"
            android:textSize="@dimen/settings_title_size"
            />
        <TextView
            android:id="@+id/needed_images_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/needed_images_number_message"/>
        <EditText
            android:id="@+id/necessary_images_number_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/edit_text_min_width"
            android:layout_marginBottom="@dimen/normal_margin"
            android:inputType="phone"
            android:hint="@string/needed_images_number_hint"
            android:textColorHint="@android:color/darker_gray"
            />
        <TextView
            android:id="@+id/checkerboard_width_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/checkerboard_width_message"/>
        <EditText
            android:id="@+id/checkerboard_width_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/edit_text_min_width"
            android:layout_marginBottom="@dimen/normal_margin"
            android:inputType="phone"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/checkerboard_width_hint"
            />
        <TextView
            android:id="@+id/checkerboard_height_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/checkerboard_height_message"/>
        <EditText
            android:id="@+id/checkerboard_height_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/edit_text_min_width"
            android:inputType="phone"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/checkerboard_height_hint"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/restore_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/settings_buttons_height"
            android:layout_weight="1"
            android:text="@string/restore_button_message"
            />
        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/settings_buttons_height"
            android:layout_weight="1"
            android:text="@string/save_button_message"
            />
    </LinearLayout>
</RelativeLayout>
